--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,9 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>W
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="password">Password</string>
+    <string name="all">All</string>
+    <string name="card">Card</string>
+    <string name="note">Note</string>W
 </resources>
