--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,15 @@
     <string name="new_password">New password</string>
     <string name="re_enter_password">Re-enter password</string>
     <string name="save_password">Save password</string>
-    <string name="icon">icon</string>W
+    <string name="icon">icon</string>
+    <string name="favorite">Favorite</string>
+    <string name="delete_record">Delete record</string>
+    <string name="share_to_group">Share to group</string>
+    <string name="name">Name</string>
+    <string name="username">Username</string>
+    <string name="urls">URLs</string>
+    <string name="cardholder_name">Cardholder Name</string>
+    <string name="card_number">Card Number</string>
+    <string name="expiration_day">Expiration Day</string>
+    <string name="edit">Edit</string>
 </resources>
