--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="card_number">Card Number</string>
     <string name="expiration_day">Expiration Day</string>
     <string name="edit">Edit</string>
+    <string name="tags">Tags</string>
 </resources>
