--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="tags">Tags</string>
     <string name="view">View</string>
     <string name="delete">Delete</string>
+    <string name="add">Add</string>
+    <string name="search">Search</string>
 </resources>
