--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="delete">Delete</string>
     <string name="add">Add</string>
     <string name="search">Search</string>
+    <string name="member_email">Member Email</string>
+    <string name="group_name">Group Name</string>
 </resources>
