--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,5 @@
     <string name="a_z">a-z</string>
     <string name="specialChar">!@#</string>
     <string name="minimum_number">Minimum Number</string>
-    <string name="minimum_special">Minimum Special</string>W
-    <string name="member_email">Member Email</string>
-    <string name="group_name">Group Name</string>
+    <string name="minimum_special">Minimum Special</string>
 </resources>
